@@ -26,9 +26,15 @@ if($Install->upgrade_database()===true) {
 	# print success
 	$Result->show("success", _("Database upgraded successfully! <a class='btn btn-sm btn-default' href='".create_link('dashboard')."'>Dashboard</a>"), false);
 
-	# migrate settings
-	$User->migrate_domain_settings ();
-    $User->migrate_ldap_settings ();
+	// migrate settings
+    if(VERSION <= "1.2") {
+		$User->migrate_domain_settings ();
+	    $User->migrate_ldap_settings ();
+	}
+    // migrate resolve_subnets
+    if(VERSION <= "1.32") {
+	    $User->migrate_resolve_subnets ();
+	}
 
 	# check for possible errors
 	if(sizeof($errors = $Tools->verify_database())>0) {
@@ -66,4 +72,3 @@ else {
 	# print failure
 	$Result->show("danger", _("Failed to upgrade database! <a class='btn btn-sm btn-default' href='".create_link('administration', "verify-database")."'>Go to administration and fix</a>"), false);
 }
-?>
